# newcover

./: .gitignore  cabal.project
newcover/: newcover.cabal
